--- a/fith_work.html
+++ b/fith_work.html
@@ -65,6 +65,10 @@
 							<div class="bullet">— Avoid the use of unnecessary elements like shadows, gradients, icons, heavy and slow animations, and overly complex elements;</div>
 							<div class="space10"></div>
 							<div class="bullet">— To maintain a simple and minimalist portfolio that evolves as the user searches for more information.</div>
+							<div class="space10"></div>
+							<div class="r15b400">Each project displayed on the “works” page is a selection of projects I had the privilege to create and that I am the proudest of. Each work has an extensive collection of images and texts to further complement in the understanding of each project, as well as links, tools and skills used.</div>
+							<div class="space10"></div>
+							<div class="r15b400">The circular images that appear both on “Home” and the “About” page are a selections of visuals I developed solely for the pleasure of creating them. The images appear accordingly with the mouse movement, without any preference or defined order whatsoever. They are displayed below along with a link to the original publication and a brief explanation of what the design is about.</div>
 						</div>
 						</div>
 						<div class="second_half">
