--- a/fith_work.html
+++ b/fith_work.html
@@ -78,11 +78,9 @@
 					</div>
 					<div class="row">
 						<div class="first_fourth space40">
-							<span class="r50b500">What about the images in the circle?</span>
-							<div class="space20"></div>
-							<span class="r20b500">&#11106; Quick Answer</span>
+							<span class="r20b500">> Design/Visuals</span>
 							<div class="space10"></div>
-							<span class="r15b400">All the images you see inside the circle are standalone experimental designs made by myself. These works range from fictional brands, book covers, experimental typography, animations and other other kinds of designs. They can all be found on my instagram account <a href="https://www.instagram.com/yagomurakami/">@yagomurakami</a>.</span>
+							<span class="r15b400">All these images were created with simple concepts and ideas in mind. They all are visual experiments of ideas and thoughts, or, sometimes, some kind of obsession about a certain subject that led to a mental image, and consequently to a design. All of these experiments can be found on my instagram account <a href="https://www.instagram.com/yagomurakami/">@yagomurakami</a>. Click on each image to display other complementary images and text.</span>
 						</div>
 						<div class="second_fourth space40">
 							<img src="img/0.gif" class="img_resp_center">
