--- a/fith_work.html
+++ b/fith_work.html
@@ -111,11 +111,9 @@
 							<img src="img/10.png" class="img_resp_center">
 						</div>
 						<div class="second_fourth space40">
-							<span class="r50b500">But what about the books?</span>
-							<div class="space20"></div>
-							<span class="r20b500">&#11106; Quick Answer</span>
+							<span class="r20b500">> Book Cover Project</span>
 							<div class="space10"></div>
-							<span class="r15b400">The book cover project started in 2019 with the intent to make me read more and to exercise the application of concept through design. The idea is to redesign the book cover and spine only after reading the entire book. This gave me the liberty to choose what part of the story to focus and work on.</span>
+							<span class="r15b400">Besides the stand-alone designs, I also started in the beginning of 2019 the project to redesign the cover of every book I read. The intent is to stimulate my reading habits and to exercise the application of concept through visual design. The idea is to redesign the book cover and spine only after reading the entire book. This gave me the liberty to choose what part of the story or concept to focus and work on.</span>
 						</div>
 						<div class="third_fourth space40">
 							<img src="img/7.jpg" class="img_resp_center">
