--- a/fith_work.html
+++ b/fith_work.html
@@ -122,7 +122,7 @@
 							<img src="img/8.jpg" class="img_resp_center">
 						</div>
 					</div>
-					<div class="row">
+					<div class="row space50down">
 						<div class="first_fourth space40">
 							<img src="img/9.jpg" class="img_resp_center">
 						</div>
