--- a/fith_work.html
+++ b/fith_work.html
@@ -14,7 +14,7 @@
 			<div class="top_left">
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
 				<div class="back_menu">
-					<a href="work.html" class="back_black">< Works</a>
+					<a href="work.html" class="back_black">Works</a>
 				</div>
 			</div>
 			<div class="section">
