--- a/second_work.html
+++ b/second_work.html
@@ -14,9 +14,9 @@
 			<div class="top_left">
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
 				<div class="back_menu">
-					<a href="work.html" class="back_black">< Works</a>
+					<a href="work.html" class="back_black">Works</a>
 					<br>
-					<a href="third_work.html" class="back_black">Next Project ></a>
+					<a href="third_work.html" class="back_black">Next Project</a>
 				</div>
 			</div>
 			<div class="section">
