--- a/first_work.html
+++ b/first_work.html
@@ -61,7 +61,7 @@
 							This project is programmed to capture a transaction each time one is broadcasted as well as the amount of bitcoin being transacted. That information is visualized as a sphere whose radius and blurriness correspond to the current monetary value of that transaction.</div>
 						</div>
 						<div class="second_half">
-							<img src="img/mempool.png" class="crop320">
+							<img src="img/mempool.png" class="img_resp_center">
 							<div class="space10"></div>
 							<span class="r15b400">Mempool public information on <a href="https://blockchair.com/bitcoin/mempool/transactions?q=block_id(-1)#" class="underline">Blockchair.com</a></span>
 						</div>
@@ -79,7 +79,7 @@
 							The bigger the transaction is, the bigger are the shapes and the duration of the accompanying sound, which becomes heavier and more intense. When the transaction is small, the sound is sharp, fast and the sphere is around a couple pixels. The presence of the shapes is attributed to large sum transactions due to its importance in the bitcoin market and its possible influence on the price.</div>
 						</div>
 						<div class="second_half">
-							<img src="img/alivecash2.gif" class="crop450">
+							<img src="img/alivecash2.gif" class="img_resp_center">
 							<div class="space10"></div>
 							<span class="r15b400">Real-time decoding of incoming data into tangible values, listing all transactions, converting BTC to USD and displaying how much was transacted since the page was opened.</span>
 						</div>
