--- a/first_work.html
+++ b/first_work.html
@@ -114,13 +114,13 @@
 						<div class="first_half">
 							<img src="img/alivecash.gif" class="img_resp_center">
 							<div class="space10"></div>
-							<span class="r15b400">Frames from the website in 16 by 9 monitor in landscape orientation.</span>
+							<span class="r15b400">Frames from the website in a 16 by 9 monitor in landscape orientation.</span>
 
 						</div>
 						<div class="second_half">
 							<img src="img/expo.jpg" class="img_resp_center">
 							<div class="space10"></div>
-							<span class="r15b400">Exhibition of the project in 16 by 9 monitor in portrait orientation in the 2017 “the data, the web, the app” exposition.</span>
+							<span class="r15b400">Exhibition of the project in a 16 by 9 monitor in portrait orientation in the 2017 “the data, the web, the app” exposition.</span>
 						</div>
 					</div>
 					<div class="row space50 space50down">
