--- a/work.html
+++ b/work.html
@@ -40,7 +40,7 @@
 				</div>
 			</div>
 			<div class="section">
-				<span class="about_spacing vertical_centered_text r40b500 underline"><a class="hide_hyper" href="about.html" id="about_work">About me</a></span>
+				<span class="about_spacing vertical_centered_text r40b500 underline disapear_on_mobile"><a class="hide_hyper" href="about.html" id="about_work">About me</a></span>
 				<div class="white_left">
 					<div class="left_holder">
 						<div class="r70b500 space30">
@@ -61,7 +61,7 @@
 						<div class="r15b500 space50"><a href="#more" class="underline" id="work_down">Scroll down for more</a></div>
 					</div>
 				</div>
-				<div class="empty_right">
+				<div class="empty_right disapear_on_mobile">
 					<img src="img/alivecash2.gif" class="showcase_img" id="project_one">
 					<img src="img/purge2.gif" class="showcase_img" id="project_two">
 					<img src="img/minuto2.gif" class="showcase_img" id="project_three">
