--- a/work.html
+++ b/work.html
@@ -59,7 +59,7 @@
 						<div class="r70b500 space30">
 							<a href="fith_work.html" class="underline" id="five">This Website / Portfolio</a><span class="numbers r30y700">5</span>
 						</div>
-						<div class="r15b500 space50"><a href="#more" class="underline" id="work_down">Scroll down for more</a></div>
+						<div class="r15b500 space50 disapear_on_mobile"><a href="#more" class="underline" id="work_down">Scroll down for more</a></div>
 					</div>
 				</div>
 				<div class="empty_right disapear_on_mobile">
