--- a/fith_work.html
+++ b/fith_work.html
@@ -23,13 +23,13 @@
 					<div class="row">
 						<img src="img/100klives.png" class="header_img">
 						<div class="fullsize space20">
-							<span class="r50b500">This Website / Portfolio</span>
-							<span class="r20b500">— A showcase</span>
+							<span class="r50b500">The images in the middle</span>
+							<span class="r20b500">— The showreel</span>
 						</div>
 						<div class="first_third space20">
 							<span class="r20b500">> Abstract</span>
 							<div class="space10"></div>
-							<span class="r15b400">This portfolio was created with the intent to showcase stand-alone personal works and bigger projects that were in fact executed. Both segments deal with the creative and technical characteristics of my works, along with my interests and abilities. All works and projects where entirely created by myself.</span>
+							<span class="r15b400">This portfolio was created with the intent to showcase stand-alone personal works and bigger projects. Both segments deal with the creative and technical characteristics of my works, along with my interests and abilities. All works and projects where entirely created by myself.</span>
 						</div>
 						<div class="second_third space20">
 							<span class="r20b500">> Made With</span>
