--- a/fith_work.html
+++ b/fith_work.html
@@ -34,11 +34,11 @@
 						<div class="second_third space20">
 							<span class="r20b500">> Made With</span>
 							<div class="space10"></div>
-							<span class="r15b400">Photoshop, Illustrator, Premiere, HTML, CSS, JavaScript, Jquery.</span>
+							<span class="r15b400">Photoshop, Illustrator, Premiere.</span>
 							<div class="space20"></div>
 							<span class="r20b500">> Keywords</span>
 							<div class="space10"></div>
-							<span class="r15b400">Portfolio, visual design, web design, UI/UX, interactive design.</span>
+							<span class="r15b400">Visual design, graphic design, branding, illustration.</span>
 						</div>
 						<div class="third_third space20">
 							<span class="r20b500">> Links</span>
@@ -46,34 +46,6 @@
 							<span class="r15b400"><a href="index.html" class="underline">Homepage</a></span>
 							<br>
 							<span class="r15b400"><a href="#" class="underline">Github</a></span>
-						</div>
-					</div>
-					<div class="row space50">
-						<div class="first_half">
-							<span class="r20b500">> Concept</span>
-							<div class="space10"></div>
-							<div class="r15b400">This entire website was hand-coded because the intent was to create an web page distinct from standard wordpress templates and boostrap models. With this in mind, the core ideas of this portfolio were:
-							<div class="space10"></div>
-							<div class="bullet">— Use of simples geometric shapes;</div>
-							<div class="space10"></div>
-							<div class="bullet">— Application of a simple color scheme;</div>
-							<div class="space10"></div>
-							<div class="bullet">— To direct the user attention to images and to the written content;</div>
-							<div class="space10"></div>
-							<div class="bullet">— Use images and typography to dictate the layout and structure;</div>
-							<div class="space10"></div>
-							<div class="bullet">— Avoid the use of unnecessary elements like shadows, gradients, icons, heavy and slow animations, and overly complex elements;</div>
-							<div class="space10"></div>
-							<div class="bullet">— To maintain a simple and minimalist portfolio that evolves as the user searches for more information.</div>
-							<div class="space10"></div>
-							<div class="r15b400">Each project displayed on the “works” page is a selection of projects I had the privilege to create and that I am the proudest of. Each work has an extensive collection of images and texts to further complement in the understanding of each project, as well as links, tools and skills used.</div>
-							<div class="space10"></div>
-							<div class="r15b400">The circular images that appear both on “Home” and the “About” page are a selections of visuals I developed solely for the pleasure of creating them. The images appear accordingly with the mouse movement, without any preference or defined order whatsoever. They are displayed below along with a link to the original publication and a brief explanation of what the design is about.</div>
-						</div>
-						</div>
-						<div class="second_half">
-							<img src="img/passwords.png" class="img_resp_center">
-							<div class="r15b400">Place here an image with different formats and pages from this website.</div>
 						</div>
 					</div>
 					<div class="row">
