--- a/fith_work.html
+++ b/fith_work.html
@@ -127,7 +127,7 @@
 							<img src="img/7.jpg" class="img_resp_center">
 						</div>
 						<div class="second_fourth space40">
-							<img src="img/8.png" class="img_resp_center">
+							<img src="img/8.jpg" class="img_resp_center">
 						</div>
 						<div class="third_fourth space40">
 							<img src="img/9.jpg" class="img_resp_center">
@@ -141,7 +141,7 @@
 							<img src="img/12.jpg" class="img_resp_center">
 						</div>
 						<div class="second_fourth space40">
-							<img src="img/13.png" class="img_resp_center">
+							<img src="img/13.jpg" class="img_resp_center">
 						</div>
 						<div class="third_fourth space40">
 							<img src="img/15.jpg" class="img_resp_center">
