--- a/work.html
+++ b/work.html
@@ -41,7 +41,7 @@
 			</div>
 			<div class="section">
 				<div class="new_work_display">
-					<img src="img/mobileshowcase.gif" class="img_resp_center">
+					<img src="img/mobileshowcase.gif" class="showcasemobile">
 				</div>
 				<span class="about_spacing vertical_centered_text r40b500 underline disapear_on_mobile"><a class="hide_hyper" href="about.html" id="about_work">About me</a></span>
 				<div class="white_left">
