--- a/work.html
+++ b/work.html
@@ -40,7 +40,7 @@
 				</div>
 			</div>
 			<div class="section">
-				<div class="new_work_display showcasemobile"></div>
+				<div class="new_work_display"><img class="showcasemobile"></div>
 				<span class="about_spacing vertical_centered_text r40b500 underline disapear_on_mobile"><a class="hide_hyper" href="about.html" id="about_work">About me</a></span>
 				<div class="white_left">
 					<div class="left_holder">
