--- a/fith_work.html
+++ b/fith_work.html
@@ -63,8 +63,6 @@
 						<div class="fourth_fourth space40">
 							<img src="img/2.png" class="img_resp_center">
 						</div>
-					</div>
-					<div class="row">
 						<div class="first_fourth space40">
 							<img src="img/3.png" class="img_resp_center">
 						</div>
@@ -77,8 +75,6 @@
 						<div class="fourth_fourth space40">
 							<img src="img/6.png" class="img_resp_center">
 						</div>
-					</div>
-					<div class="row">
 						<div class="first_fourth space40">
 							<img src="img/10.png" class="img_resp_center">
 						</div>
@@ -91,8 +87,6 @@
 						<div class="fourth_fourth space40">
 							
 						</div>
-					</div>
-					<div class="row">
 						<div class="first_fourth space40">
 							<span class="r20b500">> Book Cover Project</span>
 							<div class="space10"></div>
@@ -107,8 +101,6 @@
 						<div class="fourth_fourth space40">
 							<img src="img/9.jpg" class="img_resp_center">
 						</div>
-					</div>
-					<div class="row">
 						<div class="first_fourth space40">
 							<img src="img/11.png" class="img_resp_center">
 						</div>
@@ -121,8 +113,6 @@
 						<div class="fourth_fourth space40">
 							<img src="img/15.jpg" class="img_resp_center">
 						</div>
-					</div>
-					<div class="row space50down">
 						<div class="first_fourth space40">
 							<img src="img/16.jpg" class="img_resp_center">
 						</div>
@@ -132,7 +122,7 @@
 						<div class="third_fourth space40">
 							<img src="img/17.jpg" class="img_resp_center">
 						</div>
-						<div class="fourth_fourth space40">
+						<div class="fourth_fourth space40 space50down">
 							<img src="img/17.jpg" class="img_resp_center">
 						</div>
 					</div>
