--- a/fith_work.html
+++ b/fith_work.html
@@ -48,7 +48,7 @@
 							<span class="r15b400"><a href="#" class="underline">Github</a></span>
 						</div>
 					</div>
-					<div class="row">
+					<div class="special_row">
 						<div class="first_fourth space40">
 							<span class="r20b500">> Design/Visuals</span>
 							<div class="space10"></div>
