--- a/work.html
+++ b/work.html
@@ -36,7 +36,7 @@
 			<div class="top_left">
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
 				<div class="back_menu">
-					<a href="index.html" class="back_black show_on_mobile_inline">Home</a><span class="back_black_span show_on_mobile_inline"> / </span><a href="about.html" class="back_black">About</a>
+					<a href="index.html" class="back_black show_on_mobile_inline">Home</a><span class="back_black_span show_on_mobile_inline"> / </span><a href="about.html" class="back_black">About me</a>
 				</div>
 			</div>
 			<div class="section">
