--- a/second_work.html
+++ b/second_work.html
@@ -14,9 +14,7 @@
 			<div class="top_left">
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
 				<div class="back_menu">
-					<a href="work.html" class="back_black">Works</a>
-					<br>
-					<a href="third_work.html" class="back_black">Next Project</a>
+					<a href="work.html" class="back_black">Works</a><span class="back_black_span show_on_mobile_inline"> / </span><a href="index.html" class="back_black show_on_mobile_inline">About me</a>
 				</div>
 			</div>
 			<div class="section">
