--- a/first_work.html
+++ b/first_work.html
@@ -18,7 +18,7 @@
 				</div>
 			</div>
 			<div class="section">
-				<span class="about_spacing vertical_centered_text r40b500 underline"><a class="hide_hyper" href="about.html" id="about_work">About me</a></span>
+				<span class="about_spacing vertical_centered_text r40b500 underline disapear_on_mobile"><a class="hide_hyper" href="about.html" id="about_work">About me</a></span>
 				<div class="content">
 					<div class="row">
 						<img src="img/alivecash.png" class="header_img">
