--- a/first_work.html
+++ b/first_work.html
@@ -48,7 +48,7 @@
 							<span class="r15b400">* Project with high demand of GPU processing power, might crash the browser if there's a high flow of transactions and/or if the GPU has not enough processing power.</span>
 						</div>
 					</div>
-					<div class="row space50">
+					<div class="special_row space50">
 						<div class="first_half">
 							<span class="r20b500">> Introduction</span>
 							<div class="space10"></div>
@@ -64,7 +64,7 @@
 							<span class="r15b400">Mempool public information on <a href="https://blockchair.com/bitcoin/mempool/transactions?q=block_id(-1)#" class="underline">Blockchair.com</a></span>
 						</div>
 					</div>
-					<div class="row space50">
+					<div class="special_row space50">
 						<div class="first_half">
 							<span class="r20b500">> Concept</span>
 							<div class="space10"></div>
@@ -82,7 +82,7 @@
 							<span class="r15b400">Real-time decoding of incoming data into tangible values, listing all transactions, converting BTC to USD and displaying how much was transacted since the page was opened.</span>
 						</div>
 					</div>
-					<div class="row space50">
+					<div class="special_row space50">
 						<div class="first_half">
 							<span class="r20b500">> Implementation</span>
 							<div class="space10"></div>
@@ -108,7 +108,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="row space50">
+					<div class="special_row space50">
 						<div class="first_half">
 							<img src="img/alivecash.gif" class="img_resp_center">
 							<div class="space10"></div>
@@ -121,7 +121,7 @@
 							<span class="r15b400">Exhibition of the project in a 16 by 9 monitor in portrait orientation in the 2017 “the data, the web, the app” exposition.</span>
 						</div>
 					</div>
-					<div class="row space50 space50down">
+					<div class="special_row space50 space50down">
 						<span class="r20b500">> References</span>
 							<div class="space10"></div>
 							<div class="r15b400">Nakamoto, Satoshi. <span class="italic">Bitcoin: A Peer-to-Peer Electronic Cash System</span>. 2008. <a href="https://bitcoin.org/bitcoin.pdf" class="underline">https://bitcoin.org/bitcoin.pdf</a>.
