--- a/first_work.html
+++ b/first_work.html
@@ -121,7 +121,7 @@
 							<span class="r15b400">Exhibition of the project in a 16 by 9 monitor in portrait orientation in the 2017 “the data, the web, the app” exposition.</span>
 						</div>
 					</div>
-					<div class="special_row space50 space50down">
+					<div class="row space50 space50down">
 						<span class="r20b500">> References</span>
 							<div class="space10"></div>
 							<div class="r15b400">Nakamoto, Satoshi. <span class="italic">Bitcoin: A Peer-to-Peer Electronic Cash System</span>. 2008. <a href="https://bitcoin.org/bitcoin.pdf" class="underline">https://bitcoin.org/bitcoin.pdf</a>.
