--- a/first_work.html
+++ b/first_work.html
@@ -59,7 +59,7 @@
 							This project is programmed to capture a transaction each time one is broadcasted as well as the amount of bitcoin being transacted. That information is visualized as a sphere whose radius and blurriness correspond to the current monetary value of that transaction.</div>
 						</div>
 						<div class="second_half">
-							<img src="img/mempool.png" class="img_resp_center img_resp_center_mobile">
+							<img src="img/mempool.png" class="img_resp_center">
 							<div class="space10"></div>
 							<span class="r15b400">Mempool public information on <a href="https://blockchair.com/bitcoin/mempool/transactions?q=block_id(-1)#" class="underline">Blockchair.com</a></span>
 						</div>
@@ -77,7 +77,7 @@
 							The bigger the transaction is, the bigger are the shapes and the duration of the accompanying sound, which becomes heavier and more intense. When the transaction is small, the sound is sharp, fast and the sphere is around a couple pixels. The presence of the shapes is attributed to large sum transactions due to its importance in the bitcoin market and its possible influence on the price.</div>
 						</div>
 						<div class="second_half">
-							<img src="img/alivecash2.gif" class="img_resp_center img_resp_center_mobile">
+							<img src="img/alivecash2.gif" class="img_resp_center">
 							<div class="space10"></div>
 							<span class="r15b400">Real-time decoding of incoming data into tangible values, listing all transactions, converting BTC to USD and displaying how much was transacted since the page was opened.</span>
 						</div>
@@ -110,13 +110,13 @@
 					</div>
 					<div class="special_row space50">
 						<div class="first_half">
-							<img src="img/alivecash.gif" class="img_resp_center img_resp_center_mobile">
+							<img src="img/alivecash.gif" class="img_resp_center">
 							<div class="space10"></div>
 							<span class="r15b400">Frames from the website in a 16 by 9 monitor in landscape orientation.</span>
 
 						</div>
 						<div class="second_half">
-							<img src="img/expo.jpg" class="img_resp_center img_resp_center_mobile">
+							<img src="img/expo.jpg" class="img_resp_center">
 							<div class="space10"></div>
 							<span class="r15b400">Exhibition of the project in a 16 by 9 monitor in portrait orientation in the 2017 “the data, the web, the app” exposition.</span>
 						</div>
