--- a/first_work.html
+++ b/first_work.html
@@ -20,7 +20,7 @@
 			<div class="section">
 				<span class="about_spacing vertical_centered_text r40b500 underline disapear_on_mobile"><a class="hide_hyper" href="about.html" id="about_work">About me</a></span>
 				<div class="content">
-					<div class="row">
+					<div class="special_row">
 						<img src="img/alivecash.png" class="header_img">
 						<div class="fullsize space20">
 							<span class="r50b500">[A]Live Cash</span>
