--- a/second_work.html
+++ b/second_work.html
@@ -20,7 +20,7 @@
 			<div class="section">
 				<span class="about_spacing vertical_centered_text r40b500 underline disapear_on_mobile"><a class="hide_hyper" href="about.html" id="about_work">About me</a></span>
 				<div class="content">
-					<div class="row">
+					<div class="special_row">
 						<img src="img/purge.png" class="header_img">
 						<div class="fullsize space20">
 							<span class="r50b500">Purge App</span>
@@ -41,7 +41,7 @@
 							<span class="r15b400">Crypocurrency, Bitcoin, Digital Wallet.</span>
 						</div>
 					</div>
-					<div class="row space50">
+					<div class="special_row space50">
 						<div class="first_half">
 							<span class="r20b500">> Introduction</span>
 							<div class="space10"></div>
@@ -59,14 +59,14 @@
 							<img src="img/purge_logo.png" class="img_resp_center">
 						</div>
 					</div>
-					<div class="row space50">
+					<div class="special_row space50">
 						<div class="fullsize">
 							<img src="img/purge_infra.png" class="img_resp_center">
 							<div class="space10"></div>
 							<div class="r15b400"><a href="https://yagowns.github.io/portfolio/img/purge_infra_fullsize.png">Click here</a> to download the full-size image.</div>
 						</div>
 					</div>
-					<div class="row space50 space50down">
+					<div class="special_row space50 space50down">
 						<div class="first_half">
 							<span class="r20b500">> Implementation</span>
 							<div class="space10"></div>
