--- a/third_work.html
+++ b/third_work.html
@@ -20,7 +20,7 @@
 			<div class="section">
 				<span class="about_spacing vertical_centered_text r40b500 underline disapear_on_mobile"><a class="hide_hyper" href="about.html" id="about_work">About me</a></span>
 				<div class="content">
-					<div class="row">
+					<div class="special_row">
 						<img src="img/minuto.png" class="header_img">
 						<div class="fullsize space20">
 							<span class="r50b500">MDS Redesign</span>
@@ -46,7 +46,7 @@
 							<span class="r15b400"><a href="http://minutodesilencio.com" class="underline">minutodesilencio.com</a></span>
 						</div>
 					</div>
-					<div class="row space50">
+					<div class="special_row space50">
 						<div class="first_half">
 							<span class="r20b500">> Concept</span>
 							<div class="space10"></div>
@@ -61,7 +61,7 @@
 							<div class="r15b400">Old logo on the left, new on the right.</div>
 						</div>
 					</div>
-					<div class="row space50 space50down">
+					<div class="special_row space50 space50down">
 						<div class="first_half">
 							<span class="r20b500">> Implementation</span>
 							<div class="space10"></div>
@@ -77,7 +77,7 @@
 							<div class="r15b400">An example of a unique episode thumbnail.</div>
 						</div>
 					</div>
-					<div class="row space50 space50down">
+					<div class="special_row space50 space50down">
 						<div class="first_half">
 							<img src="img/padrim.png" class="img_resp_center">
 							<div class="r15b400"><a href="https://www.padrim.com.br/minutodesilencio">Padrim.com.br</a> sponsor header image.</div>
