--- a/fourth_work.html
+++ b/fourth_work.html
@@ -20,7 +20,7 @@
 			<div class="section">
 				<span class="about_spacing vertical_centered_text r40b500 underline disapear_on_mobile"><a class="hide_hyper" href="about.html" id="about_work">About me</a></span>
 				<div class="content">
-					<div class="row">
+					<div class="special_row">
 						<img src="img/100klives.png" class="header_img">
 						<div class="fullsize space20">
 							<span class="r50b500">100K Lives Slot Machine</span>
@@ -46,7 +46,7 @@
 							<span class="r15b400"><a href="#" class="underline">Github</a></span>
 						</div>
 					</div>
-					<div class="row space50">
+					<div class="special_row space50">
 						<div class="first_half">
 							<span class="r20b500">> Concept</span>
 							<div class="space10"></div>
@@ -64,7 +64,7 @@
 							<div class="r15b400">34 files from different "ads" for leaked databases on pastebin.com.</div>
 						</div>
 					</div>
-					<div class="row space50 space50down">
+					<div class="special_row space50 space50down">
 						<div class="first_half">
 							<span class="r20b500">> Visual Interpretation</span>
 							<div class="space10"></div>
@@ -75,7 +75,7 @@
 							
 						</div>
 					</div>
-					<div class="row space50 space50down">
+					<div class="special_row space50 space50down">
 						<div class="first_half">
 							<img src="img/emails.jpg" class="img_resp_center">
 							<div class="r15b400">One Hundred Thousand emails compressed in 1072x268 pixels, 616kB after .bmp to .jpg conversion.</div>
@@ -85,7 +85,7 @@
 							<div class="r15b400">One Hundred Thousand passwords compressed in 1072x268 pixels, 565kB after .bmp to .jpg conversion.</div>
 						</div>
 					</div>
-					<div class="row space50 space50down">
+					<div class="special_row space50 space50down">
 						<div class="first_half">
 							<img src="img/emails.gif" class="img_resp_center">
 							<div class="r15b400">All emails in four images of 268x268 pixels, 210kB per image, in a .gif.</div>
@@ -95,7 +95,7 @@
 							<div class="r15b400">All passwords in four images of 268x268 pixels, 210kB per image, in a .gif.</div>
 						</div>
 					</div>
-					<div class="row space50 space50down">
+					<div class="special_row space50 space50down">
 						<div class="first_half">
 							<span class="r20b500">> Auditive Interpretation</span>
 							<div class="space10"></div>
@@ -114,7 +114,7 @@
 						    <div class="r15b400">Passwords > Text > Hexadecimal > BMP File > WAV File.</div>
 						</div>
 					</div>
-					<div class="row space50 space50down">
+					<div class="special_row space50 space50down">
 						<div class="first_half">
 							<span class="r20b500">> Interactive Interpretation</span>
 							<div class="space10"></div>
