--- a/fith_work.html
+++ b/fith_work.html
@@ -23,18 +23,18 @@
 					<div class="row">
 						<img src="img/100klives.png" class="header_img">
 						<div class="fullsize space20">
-							<span class="r50b500">This Website / Portfolio</span>
+							<span class="r50b500">Visiual Experiments</span>
 							<span class="r20b500">— A showcase</span>
 						</div>
 						<div class="first_third space20">
 							<span class="r20b500">> Abstract</span>
 							<div class="space10"></div>
-							<span class="r15b400">This portfolio was created with the intent to showcase stand-alone personal works and bigger projects that were in fact executed. Both segments deal with the creative and technical characteristics of my works, along with my interests and abilities. All works and projects where entirely created by myself.</span>
+							<span class="r15b400">All of the visual displayed in the homepage of this portfolio are self-made experiments based on different topics. The image changes accordingly with the mouse movement and in case of idleness, the image will randomly change after a few seconds. </span>
 						</div>
 						<div class="second_third space20">
 							<span class="r20b500">> Made With</span>
 							<div class="space10"></div>
-							<span class="r15b400">Photoshop, Illustrator, Premiere, HTML, CSS, JavaScript, Jquery.</span>
+							<span class="r15b400">Photoshop, Illustrator, Premiere.</span>
 							<div class="space20"></div>
 							<span class="r20b500">> Keywords</span>
 							<div class="space10"></div>
