--- a/fith_work.html
+++ b/fith_work.html
@@ -38,7 +38,7 @@
 							<div class="space20"></div>
 							<span class="r20b500">> Keywords</span>
 							<div class="space10"></div>
-							<span class="r15b400">Portfolio, visual design, graphic design, illustration, animation.</span>
+							<span class="r15b400">Portfolio, visual design, graphic design, illustration, typography.</span>
 						</div>
 						<div class="third_third space20">
 							<span class="r20b500">> Links</span>
