--- a/fith_work.html
+++ b/fith_work.html
@@ -45,7 +45,7 @@
 							<div class="space10"></div>
 							<span class="r15b400"><a href="index.html" class="underline">Homepage</a></span>
 							<br>
-							<span class="r15b400"><a href="#" class="underline">Github</a></span>
+							<span class="r15b400"><a href="https://github.com/yagowns/portfolio" class="underline">Github</a></span>
 						</div>
 					</div>
 					<div class="special_row">
