--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 						<div class="r50b500">About_</div>
 						<p class="r15b400">Hello, my name is Yago Murakami, born and raised in Rio de Janeiro, Brazil, currently living and working in Lisbon, Portugal. Graduated in Visual Design, with over 5 years of experience in graphic and web design that is accompanied by a set of self-taught web-development skills. I had the privilege to work with brands such as Nike, Gatorade, Nutella, Hendricks, Cointreau, WomenSecret, Syoss and Schwarzkopf.<br><br>With an ever-growing desire to create and experiment, learning has an important role in each creation. From concept to execution of an idea, the whole process of creation is, by itself, immensely rewarding mostly because of its path, rather than its final form.<br><br>If you want to know more about me or my work, you can 
 							my curriculum or download the .pdf below, or if you want to just say hi, freel to contact me.</p>
-						<div class="r15b700 space50"><span target="_blank"><a href="view.html" class="underline bg_white_click">View</a></span> or <a href="" target="_blank" class="underline bg_white_click">download</a> my Curriculum</div>
+						<div class="r15b700 space50"><span target="_blank"><a href="view.html" class="underline bg_white_click">View</a></span> or <a href="portf_yago_murakami_26052019_en.pdf" target="_blank" class="underline bg_white_click">download</a> my Curriculum</div>
 					</div>
 					<span class="work_spacing vertical_centered_text r40b500 underline disapear_on_mobile"><a class="hide_hyper" href="work.html" id="work_about">My work</a></span>
 				</div>
