--- a/work.html
+++ b/work.html
@@ -67,7 +67,7 @@
 					<img src="img/purge2.gif" class="showcase_img" id="project_two">
 					<img src="img/minuto2.gif" class="showcase_img" id="project_three">
 					<img src="img/100klives2.gif" class="showcase_img" id="project_four">
-					<img src="img/this.gif" class="showcase_img" id="project_five">
+					<img src="img/experiments.png" class="showcase_img" id="project_five">
 				</div>
 				<div class="below_white" id="more">
 					<div class="web_work">
