--- a/fith_work.html
+++ b/fith_work.html
@@ -21,7 +21,7 @@
 				<span class="about_spacing vertical_centered_text r40b500 underline disapear_on_mobile"><a class="hide_hyper" href="about.html" id="about_work">About me</a></span>
 				<div class="content">
 					<div class="row">
-						<img src="img/100klives.png" class="header_img">
+						<img src="experiments.png" class="header_img">
 						<div class="fullsize space20">
 							<span class="r50b500">Visiual Experiments</span>
 							<span class="r20b500">— A showcase</span>
