--- a/work.html
+++ b/work.html
@@ -74,7 +74,7 @@
 						<div class="margins_one">
 							<div class="r15b400">More web design work</div>
 							<div class="r30b500 space10">
-								<a href="#" target="_blank" class="underline">Algarve-invest*</a>, <a href="#" target="_blank" class="underline">Casa-Museu Medeiros Almedia</a>, <a href="#" target="_blank" class="underline">Correio da Manhã Canadá</a>, <a href="#" target="_blank" class="underline">Merlin Filmes + Conteúdos*</a>, <a href="#" target="_blank" class="underline">Minuto de Silêncio Podcast*</a> e <a href="#" target="_blank" class="underline">Sonomage*</a>.
+								<a href="http://www.casa-museumedeirosealmeida.pt" target="_blank" class="underline">Casa-Museu Medeiros Almedia</a>, <a href="http://www.correiodamanhacanada.com/" target="_blank" class="underline">Correio da Manhã Canadá</a>, <a href="http://merlinfilmes.com/" target="_blank" class="underline">Merlin Filmes + Conteúdos*</a>, <a href="http://minutodesilencio.com/" target="_blank" class="underline">Minuto de Silêncio Podcast*</a> e <a href="http://sonomage.com/" target="_blank" class="underline">Sonomage*</a>.
 							</div>
 							<div class="r15b400 space20">*Web design, Logo & Branding</div>
 						</div>
