--- a/second_work.html
+++ b/second_work.html
@@ -14,7 +14,7 @@
 			<div class="top_left">
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
 				<div class="back_menu">
-					<a href="work.html" class="back_black">Works</a><span class="back_black_span show_on_mobile_inline"> / </span><a href="index.html" class="back_black show_on_mobile_inline">About me</a>
+				<a href="about.html" class="back_black">About</a><span class="back_black_span show_on_mobile_inline"> / </span><a href="index.html" class="back_black show_on_mobile_inline">Home</a><span class="back_black_span show_on_mobile_inline"> / </span><a href="work.html" class="back_black show_on_mobile_inline">My Work</a>
 				</div>
 			</div>
 			<div class="section">
