--- a/fith_work.html
+++ b/fith_work.html
@@ -85,7 +85,7 @@
 							<img src="img/18.png" class="img_resp_center">
 						</div>
 						<div class="fourth_fourth space40">
-							
+							<img src="img/24.png" class="img_resp_center">
 						</div>
 						<div class="first_fourth space40">
 							<span class="r20b500">> Book Cover Project</span>
@@ -124,6 +124,18 @@
 						</div>
 						<div class="fourth_fourth space40 space50down">
 							<img src="img/20.jpg" class="img_resp_center">
+						</div>
+						<div class="first_fourth space40">
+							<img src="img/23.jpg" class="img_resp_center">
+						</div>
+						<div class="second_fourth space40">
+							<img src="img/21.jpg" class="img_resp_center">
+						</div>
+						<div class="third_fourth space40">
+							<img src="img/22.jpg" class="img_resp_center">
+						</div>
+						<div class="fourth_fourth space40 space50down">
+							
 						</div>
 					</div>
 				</div>
