--- a/fith_work.html
+++ b/fith_work.html
@@ -122,7 +122,7 @@
 						<div class="third_fourth space40">
 							<img src="img/19.jpg" class="img_resp_center">
 						</div>
-						<div class="fourth_fourth space40 space50down">
+						<div class="fourth_fourth space40">
 							<img src="img/20.jpg" class="img_resp_center">
 						</div>
 						<div class="first_fourth space40">
