--- a/view.html
+++ b/view.html
@@ -55,7 +55,11 @@
 					<div class="space30"></div>
 					<span class="r15b700">Media Consulting</span>
 					<br>
-					<span class="r15b400">Marketing & Communication Agency,<br>Web & Graphic Designer,<br>October 2016 to present day, Lisbon, Portugal</span>
+					<span class="r15b400">Marketing & Communication Agency,<br>Web & Graphic Designer,<br>October 2016 to October 2019, Lisbon, Portugal</span>
+					<div class="space30"></div>
+					<span class="r15b700">Unika Studio</span>
+					<br>
+					<span class="r15b400">Design Agency,<br>Creative Director,<br>October 2019 to present day, Lisbon, Portugal</span>
 					<div class="space20 divider"></div>
 					<div class="space20"></div>
 					<span class="r20b500">&#8776; 5 years of agency experience.</span>
