--- a/view.html
+++ b/view.html
@@ -57,7 +57,7 @@
 					<br>
 					<span class="r15b400">Marketing & Communication Agency,<br>Web & Graphic Designer,<br>October 2016 to October 2019, Lisbon, Portugal</span>
 					<div class="space30"></div>
-					<span class="r15b700">Unika Studio</span>
+					<span class="r15b700">Studio Unika</span>
 					<br>
 					<span class="r15b400">Design Agency,<br>Creative Director,<br>October 2019 to present day, Lisbon, Portugal</span>
 					<div class="space20 divider"></div>
