--- a/first_work.html
+++ b/first_work.html
@@ -44,7 +44,7 @@
 						<div class="third_third space20">
 							<span class="r20b500">> Links</span>
 							<div class="space10"></div>
-							<span class="r15b400"><a href="http://fbaul-dcnm.pt/yago/alive_cash/" class="underline">Live Project*</a></span>
+							<span class="r15b400"><a href="https://yagowns.github.io/alivecash/index.html" class="underline">Live Project*</a></span>
 							<div class="space10"></div>
 							<span class="r15b400">* Project with high demand of GPU processing power, might crash the browser if there's a high flow of transactions and/or if the GPU has not enough processing power.</span>
 						</div>
