--- a/view.html
+++ b/view.html
@@ -60,10 +60,10 @@
 					<div class="space30"></div>
 					<span class="r15b700">Studio Unika</span>
 					<br>
-					<span class="r15b400">Design Agency,<br>Creative Director,<br>October 2019 to present day, Lisbon, Portugal</span>
+					<span class="r15b400">Design Agency,<br>Creative Director,<br>October 2019 to October 2020, Lisbon, Portugal</span>
 					<div class="space20 divider"></div>
 					<div class="space20"></div>
-					<span class="r20b500">&#8776; 5 years of agency experience.</span>
+					<span class="r20b500">&#8776; 6 years of agency experience.</span>
 				</div>
 				<div class="fourth_col">
 					<span class="r20b500">> Knowledge and Skills</span>
