--- a/view.html
+++ b/view.html
@@ -60,7 +60,7 @@
 					<div class="space30"></div>
 					<span class="r15b700">Studio Unika</span>
 					<br>
-					<span class="r15b400">Design Agency,<br>Creative Director,<br>October 2019 to October 2020, Lisbon, Portugal</span>
+					<span class="r15b400">Design Agency,<br>Creative Director/Senior Designer,<br>October 2019 to October 2020, Lisbon, Portugal</span>
 					<div class="space20 divider"></div>
 					<div class="space20"></div>
 					<span class="r20b500">&#8776; 6 years of agency experience.</span>
