--- a/view.html
+++ b/view.html
@@ -62,8 +62,13 @@
 					<br>
 					<span class="r15b400">Design Agency,<br>Creative Director/Senior Designer,<br>October 2019 to October 2020, Lisbon, Portugal</span>
 					<div class="space20 divider"></div>
+					<div class="space30"></div>
+					<span class="r15b700">leme.studio</span>
+					<br>
+					<span class="r15b400">Creative Studio,<br>Creative Director/Senior Designer,<br>August 2020, Rio de Janeiro, Brazil</span>
+					<div class="space20 divider"></div>
 					<div class="space20"></div>
-					<span class="r20b500">&#8776; 6 years of agency experience.</span>
+					<span class="r20b500">&#8776; 8 years of agency experience.</span>
 				</div>
 				<div class="fourth_col">
 					<span class="r20b500">> Knowledge and Skills</span>
